[front|fix] Only show edit-profile page when user profile is not fully field, and fixed profile-image-input not showing up on some occassion

--- a/front/src/app/app.scss
+++ b/front/src/app/app.scss
@@ -90,8 +90,8 @@ app-image-viewer{
   }
 
   li:last-child{
-    position: absolute;
-    right: 0;
+    flex: 1;
+    text-align: end;
   }
 
   .notif-dropdown-container{
